# AdaptiveCAD

./: .gitignore  ADAPTIVE_PI_AXIOMS.md  ADVANCED_SHAPES.md  AdaptiveCAD.code-workspace  COSMIC_CURVE_TOOLS.md  COSMIC_EXPLORATION_SUITE.md  DISPLAY_BUG_FIX_SUMMARY.md  ENVIRONMENT.md  HYPERBOLIC_GEOMETRY_IMPLEMENTATION.md  IMPORT_SYSTEM_COMPLETE.md  MATH_REFERENCE.md  MODELING_TOOLS.md  MULTIVERSE_EXPLORATION.md  Multi-Demension.md  NEW_FEATURES_SUMMARY.md  PLAYGROUND_GUIDE.md  PLAYGROUND_IMPORT_TESTING.md  README.md  RESPONSIVE_IMPORT_SYSTEM.md  activate_conda.ps1  add_unselect_toolbar.py  ama2gcode.py  ama_to_gcode_converter.py  check_environment.bat  check_environment.ps1  check_environment.py  check_occ.py  check_occ_status.py  check_qt.py  create_minimal_playground.py  create_superellipse_playground.py  debug_import.bat  debug_playground.py  demo_responsive_import.py  diagnose_import.bat  environment.yml  example_script.py  export_slices.py  firsteverever.gcode  fix_playground_complete.py  (+80 more)
adaptivecad/: __init__.py  analytic_slicer.py  command_defs.py  commands.py  cosmic_curve_tools.py  display_utils.py  fix_superellipse_error.py  gcode_generator.py  linalg.py  nd_math.py  ndbox.py  ndfield.py  params.py  patch_superellipse.py  primitives.py  push_pull.py  quantum.py  quantum_visualization.py  settings.py  simple_stl.py  sketch_solver.py  slice_export.py  slicer3d.py  snap.py  snap_points.py  snap_strategies.py  snapping.py  spacetime.py  topology_tools.py  vecn.py
cpp/: CMakeLists.txt  README.md
tests/: conftest.py  test_ai_bridge.py  test_ama_exists.py  (+28 more)
(+62 files in other folders)
